@@ -807,31 +807,31 @@ public abstract class SOCBoard implements Serializable, Cloneable
         if (is6player)
         {
             for (i = 0x07; i <= 0x6D; i += 0x11)
-                nodesOnLand.add(new Integer(i));
+                nodesOnLand.add(Integer.valueOf(i));
         }
 
         for (i = 0x27 - westAdj; i <= 0x8D; i += 0x11)  //  Northernmost horizontal row: each north corner across 3 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         for (i = 0x25 - westAdj; i <= 0xAD; i += 0x11)  // Next: each north corner of row of 4 / south corner of the northernmost 3 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         for (i = 0x23 - westAdj; i <= 0xCD; i += 0x11)  // Next: north corners of middle row of 5 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         for (i = 0x32 - westAdj; i <= 0xDC; i += 0x11) // Next: south corners of middle row of 5 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         for (i = 0x52 - westAdj; i <= 0xDA; i += 0x11)  // South corners of row of 4 / north corners of the southernmost 3 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         for (i = 0x72 - westAdj; i <= 0xD8; i += 0x11)  // Southernmost horizontal row: each south corner across 3 hexes
-            nodesOnLand.add(new Integer(i));
+            nodesOnLand.add(Integer.valueOf(i));
 
         if (is6player)
         {
             for (i = 0x70; i <= 0xD6; i += 0x11)
-                nodesOnLand.add(new Integer(i));
+                nodesOnLand.add(Integer.valueOf(i));
         }
     }
 
@@ -986,7 +986,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
                 Vector<Integer> unvisited = new Vector<Integer>();  // contains each land hex's coordinate
                 for (int i = 0; i < landHex.length; ++i)
                 {
-                    unvisited.addElement(new Integer(numToHexID[numPath[i]]));
+                    unvisited.addElement(Integer.valueOf(numToHexID[numPath[i]]));
                 }
                 clumpsNotOK = makeNewBoard_checkLandHexResourceClumps(unvisited, clumpSize);
             }  // if (checkClumps)
@@ -1080,7 +1080,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
         //   We're operating on Integer instances, which is okay because
         //   vector methods such as contains() and remove() test obj.equals()
         //   to determine if the Integer is a member.
-        //   (getAdjacent() returns new Integer objs with the same value
+        //   (getAdjacent() returns Integer.valueOf objs with the same value
         //    as unvisited's members.)
 
         boolean clumpsNotOK = false;    // will set true in while-loop body
@@ -1308,9 +1308,9 @@ public abstract class SOCBoard implements Serializable, Cloneable
             }
         }
 
-        final Integer node1Int = new Integer(node1),
-                      node2Int = new Integer(node2),
-                      ptypeInt = new Integer(ptype);
+        final Integer node1Int = Integer.valueOf(node1),
+                      node2Int = Integer.valueOf(node2),
+                      ptypeInt = Integer.valueOf(ptype);
 
         nodeIDtoPortType.put(node1Int, ptypeInt);
         nodeIDtoPortType.put(node2Int, ptypeInt);
@@ -1349,52 +1349,52 @@ public abstract class SOCBoard implements Serializable, Cloneable
         if (is6player)
         {
             for (i = 0x07; i <= 0x5C; i += 0x11)
-                legalRoads.add(new Integer(i));
+                legalRoads.add(Integer.valueOf(i));
 
             for (i = 0x06; i <= 0x6C; i += 0x22)
-                legalRoads.add(new Integer(i));
+                legalRoads.add(Integer.valueOf(i));
         }
 
         for (i = 0x27 - westAdj; i <= 0x7C; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x26 - westAdj; i <= 0x8C; i += 0x22)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x25 - westAdj; i <= 0x9C; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x24 - westAdj; i <= 0xAC; i += 0x22)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x23 - westAdj; i <= 0xBC; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x22 - westAdj; i <= 0xCC; i += 0x22)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x32 - westAdj; i <= 0xCB; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x42 - westAdj; i <= 0xCA; i += 0x22)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x52 - westAdj; i <= 0xC9; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x62 - westAdj; i <= 0xC8; i += 0x22)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         for (i = 0x72 - westAdj; i <= 0xC7; i += 0x11)
-            legalRoads.add(new Integer(i));
+            legalRoads.add(Integer.valueOf(i));
 
         if (is6player)
         {
             for (i = 0x60; i <= 0xC6; i += 0x22)
-                legalRoads.add(new Integer(i));
+                legalRoads.add(Integer.valueOf(i));
 
             for (i = 0x70; i <= 0xC5; i += 0x11)
-                legalRoads.add(new Integer(i));
+                legalRoads.add(Integer.valueOf(i));
         }
 
         return legalRoads;
@@ -1758,7 +1758,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
         if ((nodeCoord < 0) || (nodeIDtoPortType == null))
             return -1;
 
-        Integer ptype = nodeIDtoPortType.get(new Integer(nodeCoord));
+        Integer ptype = nodeIDtoPortType.get(Integer.valueOf(nodeCoord));
         if (ptype != null)
             return ptype.intValue();
         else
@@ -2102,9 +2102,9 @@ public abstract class SOCBoard implements Serializable, Cloneable
         Vector<Integer> nodes = new Vector<Integer>(2);
         final int[] narr = getAdjacentNodesToEdge_arr(coord);
         if ((narr[0] >= minNode) && (narr[0] <= MAXNODE))
-            nodes.addElement(new Integer(narr[0]));
+            nodes.addElement(Integer.valueOf(narr[0]));
         if ((narr[1] >= minNode) && (narr[1] <= MAXNODE))
-            nodes.addElement(new Integer(narr[1]));
+            nodes.addElement(Integer.valueOf(narr[1]));
         return nodes;
     }
 
@@ -2181,28 +2181,28 @@ public abstract class SOCBoard implements Serializable, Cloneable
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x01;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x10;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord - 0x01;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
         }
 
@@ -2216,28 +2216,28 @@ public abstract class SOCBoard implements Serializable, Cloneable
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x01;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x11;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord - 0x01;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
         }
         else
@@ -2250,28 +2250,28 @@ public abstract class SOCBoard implements Serializable, Cloneable
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x11;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x10;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord - 0x11;
 
             if ((tmp >= minEdge) && (tmp <= maxEdge))
             {
-                edges.addElement(new Integer(tmp));
+                edges.addElement(Integer.valueOf(tmp));
             }
         }
 
@@ -2299,21 +2299,21 @@ public abstract class SOCBoard implements Serializable, Cloneable
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x10;
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord - 0x12;
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
         }
         else
@@ -2326,21 +2326,21 @@ public abstract class SOCBoard implements Serializable, Cloneable
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord + 0x01;
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
 
             tmp = coord - 0x01;
 
             if ((tmp >= MINHEX) && (tmp <= MAXHEX))
             {
-                hexes.addElement(new Integer(tmp));
+                hexes.addElement(Integer.valueOf(tmp));
             }
         }
 
@@ -2359,7 +2359,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
         int[] edgea = getAdjacentEdgesToNode_arr(coord);
         for (int i = edgea.length - 1; i>=0; --i)
             if (edgea[i] != -9)
-                edges.addElement(new Integer(edgea[i]));
+                edges.addElement(Integer.valueOf(edgea[i]));
         return edges;
     }
 
@@ -2595,7 +2595,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
         int[] nodea = getAdjacentNodesToNode_arr(coord);
         for (int i = nodea.length - 1; i>=0; --i)
             if (nodea[i] != -9)
-                nodes.addElement(new Integer(nodea[i]));
+                nodes.addElement(Integer.valueOf(nodea[i]));
         return nodes;
     }
 
@@ -2903,7 +2903,7 @@ public abstract class SOCBoard implements Serializable, Cloneable
             && (includeWater
                 || ((hexLayout[hexIDtoNum[hexCoord]] <= MAX_LAND_HEX)
                     && (hexLayout[hexIDtoNum[hexCoord]] != WATER_HEX)) ))
-            addTo.addElement(new Integer(hexCoord));
+            addTo.addElement(Integer.valueOf(hexCoord));
     }
 
     /**
