@@ -386,7 +386,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
      * Placing a settlement will clear its node and adjacent nodes.
      *<P>
      * Key = node coordinate, as {@link Integer}.
-     * If {@link HashSet#contains(Object) legalSettlements.contains(new Integer(nodeCoord))},
+     * If {@link HashSet#contains(Object) legalSettlements.contains(Integer.valueOf(nodeCoord))},
      * then <tt>nodeCoord</tt> is a legal settlement.
      *<P>
      * If not {@link SOCGame#hasSeaBoard}, initialized in constructor
@@ -454,7 +454,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
      * Placing a settlement will clear its node and adjacent nodes.
      *<P>
      * Key = node coordinate, as {@link Integer}.
-     * If {@link HashSet#contains(Object) potentialSettlements.contains(new Integer(nodeCoord))},
+     * If {@link HashSet#contains(Object) potentialSettlements.contains(Integer.valueOf(nodeCoord))},
      * then this is a potential settlement.
      * @see #legalSettlements
      * @see #setPotentialAndLegalSettlements(Collection, boolean, HashSet[])
@@ -1833,7 +1833,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
             // - node is the "far end" of edge, next to be inspected
             // - segment's most recently added ship is the one at edge
 
-            final Integer edgeInt = new Integer(edge);
+            final Integer edgeInt = Integer.valueOf(edge);
 
             // have we already visited this edge?
             if (alreadyVisited.contains(edgeInt))
@@ -1930,7 +1930,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
                 {
                     // Build an encounteredSelf list entry.
                     Vector<Object> already = new Vector<Object>();
-                    already.add(new Integer(node));
+                    already.add(Integer.valueOf(node));
                     already.addAll(segment);
 
                     encounteredSelf.add(already);
@@ -2713,8 +2713,8 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
         {
             final int node0 = nodeCoords[0],
                       node1 = nodeCoords[1];
-            final Integer node0Int = new Integer(node0),
-                          node1Int = new Integer(node1);
+            final Integer node0Int = Integer.valueOf(node0),
+                          node1Int = Integer.valueOf(node1);
 
             // roadNodeGraph[node0][node1]
             int[] rnArr = roadNodeGraph.get(node0Int);
@@ -3002,7 +3002,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
     {
         final boolean ours = (piece.getPlayerNumber() == playerNumber);
         final int pieceCoord = piece.getCoordinates();
-        final Integer pieceCoordInt = new Integer(pieceCoord);
+        final Integer pieceCoordInt = Integer.valueOf(pieceCoord);
 
         final SOCBoard board = game.getBoard();
         switch (piece.getType())
@@ -3136,7 +3136,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
      */
     protected void undoPutPieceAuxSettlement(int settlementNode)
     {
-        final Integer settleNodeInt = new Integer(settlementNode);
+        final Integer settleNodeInt = Integer.valueOf(settlementNode);
 
         //D.ebugPrintln("))))) undoPutPieceAuxSettlement : node = "+Integer.toHexString(settlementNode));
         //
@@ -3282,7 +3282,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
         D.ebugPrintln("--- SOCPlayer.removePiece(" + piece + ")");
 
         final int pieceCoord = piece.getCoordinates();
-        final Integer pieceCoordInt = new Integer(pieceCoord);
+        final Integer pieceCoordInt = Integer.valueOf(pieceCoord);
         final int ptype = piece.getType();
 
         Enumeration<SOCPlayingPiece> pEnum = pieces.elements();
@@ -3375,8 +3375,8 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
                     {
                         final int node0 = edgeNodeCoords[0],
                                   node1 = edgeNodeCoords[1];
-                        final Integer node0Int = new Integer(node0),
-                                      node1Int = new Integer(node1);
+                        final Integer node0Int = Integer.valueOf(node0),
+                                      node1Int = Integer.valueOf(node1);
 
                         // check roadNodeGraph[node0][node1]
                         int[] rnArr = roadNodeGraph.get(node0Int);
@@ -3704,7 +3704,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
         final boolean ours;
         boolean blocked;
         final int id = piece.getCoordinates();
-        final Integer idInt = new Integer(id);
+        final Integer idInt = Integer.valueOf(id);
         SOCBoard board = game.getBoard();
 
         /**
@@ -3759,7 +3759,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
                             int edge = edges[i];
                             if (edge != -9)
                             {
-                                final Integer edgeInt = new Integer(edge);
+                                final Integer edgeInt = Integer.valueOf(edge);
                                 if (ptype == SOCPlayingPiece.ROAD)
                                 {
                                     if (legalRoads.contains(edgeInt))
@@ -3771,7 +3771,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
                             }
                         }
 
-                        final Integer nodeInt = new Integer(node);
+                        final Integer nodeInt = Integer.valueOf(node);
                         if (legalSettlements.contains(nodeInt))
                         {
                             potentialSettlements.add(nodeInt);
@@ -3837,7 +3837,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
             {
                 if (adjac[i] != -9)
                 {
-                    final Integer adjacNodeInt = new Integer(adjac[i]);
+                    final Integer adjacNodeInt = Integer.valueOf(adjac[i]);
                     potentialSettlements.remove(adjacNodeInt);
                     legalSettlements.remove(adjacNodeInt);
                 }
@@ -3856,7 +3856,7 @@ public class SOCPlayer implements SOCDevCardConstants, Serializable, Cloneable
                     tmp = adjac[i];
                     if (tmp != -9)
                     {
-                        final Integer tmpEdgeInt = new Integer(tmp);
+                        final Integer tmpEdgeInt = Integer.valueOf(tmp);
                         if (legalRoads.contains(tmpEdgeInt))
                             potentialRoads.add(tmpEdgeInt);
                         if (legalShips.contains(tmpEdgeInt))
