@@ -181,7 +181,7 @@ public class SOCPlayerNumbers
         //    So, skip this loop:
         // for (int i = 0; i < landHexCoords.length; i++)
         // {
-        //    numberAndResourceForHex.put(new Integer(landHexCoords[i]), new Vector());
+        //    numberAndResourceForHex.put(Integer.valueOf(landHexCoords[i]), new Vector());
         // }
     }
 
@@ -397,7 +397,7 @@ public class SOCPlayerNumbers
             if (landHexCoords[i] == robberHex)
                 continue;
 
-            Vector<IntPair> pairs = numberAndResourceForHex.get(new Integer(landHexCoords[i]));
+            Vector<IntPair> pairs = numberAndResourceForHex.get(Integer.valueOf(landHexCoords[i]));
             if (pairs == null)
                 continue;
 
@@ -456,9 +456,9 @@ public class SOCPlayerNumbers
                     if (hasSeaBoard && (res == SOCBoardLarge.GOLD_HEX))
                     {
                         for (int r = SOCResourceConstants.CLAY; r <= SOCResourceConstants.WOOD; ++r)
-                            resources.addElement(new Integer(r));
+                            resources.addElement(Integer.valueOf(r));
                     } else {
-                        resources.addElement(new Integer(res));
+                        resources.addElement(Integer.valueOf(res));
                     }
                 }
             }
@@ -481,9 +481,9 @@ public class SOCPlayerNumbers
     {
         if ((resource >= SOCResourceConstants.CLAY) && (resource <= SOCResourceConstants.WOOD))
         {
-            numbersForResource[resource].addElement(new Integer(diceNum));
+            numbersForResource[resource].addElement(Integer.valueOf(diceNum));
 
-            Integer resourceInt = new Integer(resource);
+            Integer resourceInt = Integer.valueOf(resource);
 
             //if (!resourcesForNumber[number].contains(resourceInt)) {
             resourcesForNumber[diceNum].addElement(resourceInt);
@@ -498,17 +498,17 @@ public class SOCPlayerNumbers
             }
 
             // GOLD_HEX: Add all 5 resource types
-            final Integer diceNumInt = new Integer(diceNum);
+            final Integer diceNumInt = Integer.valueOf(diceNum);
             for (int res = SOCResourceConstants.CLAY; res <= SOCResourceConstants.WOOD; ++res)
             {
                 numbersForResource[res].addElement(diceNumInt);
-                resourcesForNumber[diceNum].addElement(new Integer(res));
+                resourcesForNumber[diceNum].addElement(Integer.valueOf(res));
             }
 
             // GOLD_HEX is okay in numberAndResourceForHex.
         }
 
-        final Integer hexInt = new Integer(hex);
+        final Integer hexInt = Integer.valueOf(hex);
         Vector<IntPair> pairs = numberAndResourceForHex.get(hexInt);
         if (pairs == null)
         {
